--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,15 @@
 <dependencies>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java8</artifactId>
+            <artifactId>cucumber-java</artifactId>
             <version>7.12.1</version>
             <scope>test</scope>
         </dependency>
+    <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-java</artifactId>
+        <version>7.12.1</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 </project>
